2011-12-04  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_encoding.rb: add tests for bind_string_as_nchar
	    property.
	* ext/oci8/metadata.c, lib/oci8/metadata.rb: delete the internally used
	    OCI8::Metadata::Base#__charset_name method.
	* lib/oci8/oci8.rb: add OCI8#database_charset_name. (added to test
	    bind_string_as_nchar.)

2011-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: fix to work with ruby 2.0.

2011-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_connection_pool.rb: fix to pass a connection pool test.
	    OCI8::ConnectionPool#open_count after decrement depends on
	    Oracle version. (reported by Yasuo Honda)

2011-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_metadata.rb: Check object type availability by querying
	    all_objects data dictionary. Fix #3 at http://github.com/kubo/ruby-oci8.
	    (reported by Yasuo Honda)

2011-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Use Gem::Command.build_args to get arguments
	    after '--'. This may solve issues #4 at http://github.com/kubo/ruby-oci8.
	    (reported by jbirdjavi)

2011-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml: fix for run-time Oracle function checking.
	* ext/oci8/oraconf.rb: fix a bug not to compile for full client on
	    Windows. The bug was caused by the commit at 2011-10-17.
	* lib/oci8/connection_pool.rb, lib/oci8/properties.rb: fix rdoc
	    comments.

2011-11-27  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_break.rb: fix test_timeout test for an Oracle server
	    on Windows.
	* test/test_all.rb, test/test_connection_pool.rb: add testcases
	    of OCI8::ConnectionPool.
	* test/test_oci8.rb: add a testcase for OCI8#last_error.
	* test/test_oranumber.rb: add a testcase for OCI8.properties[:float_conversion_type].

2011-11-26  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, test/test_object.rb: fix a bug that an array is
	   always bound as null. This bug was introduced in ruby-oci8 2.0.5.