@@ -6,6 +6,7 @@ require "#{srcdir}/config"
 
 require "#{srcdir}/test_oradate"
 require "#{srcdir}/test_oranumber"
+require "#{srcdir}/test_bind_string"
 require "#{srcdir}/test_bind_time"
 require "#{srcdir}/test_bind_raw"
 if $test_clob
